@@ -511,8 +511,10 @@ let rec convertExpr env e =
       begin match args with
       | {edesc = C.EConst(CStr txt)} :: args1 ->
           let targs1 = convertTypList env (List.map (fun e -> e.etyp) args1) in
-          Ebuiltin(EF_annot(intern_string txt, typlist_of_typelist targs1),
-                   targs1, convertExprList env args1, ty)
+          Ebuiltin(
+            EF_annot(intern_string txt,
+                     List.map (fun t -> AA_arg t) (typlist_of_typelist targs1)),
+            targs1, convertExprList env args1, ty)
       | _ ->
           error "ill-formed __builtin_annot (first argument must be string literal)";
           ezero
